# mcp-playground

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/playground/: config.py  middleware.py  server.py
src/playground/data/: campaigns.json  dataset.py  generate.py
src/playground/tools/: campaigns.py  gated.py
tests/: test_auth_flow.py  test_dataset.py
