[project]
name = "mcp-playground"
version = "0.1.0"
description = "Public playground MCP server for mcpbuilders.dev — demo MarTech tools with optional per-user Google OAuth"
requires-python = ">=3.12"
dependencies = [
    "fastmcp==3.2.4",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
]

[project.scripts]
playground = "playground.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/playground"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
